--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -1,9 +1,20 @@
+
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Autoclicker.MainWindow"
-        Title="Autoclicker">
-    Welcome to Avalonia!
+		Background="#FFFF"
+		Width="300"
+		Height="200"
+		CornerRadius="8"
+        ExtendClientAreaToDecorationsHint="True"
+        ExtendClientAreaChromeHints="NoChrome"
+        ExtendClientAreaTitleBarHeightHint="0"
+        CanResize="False">
+	<Grid>
+		
+	</Grid>
 </Window>
+<!--xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+x:Class="Autoclicker.MainWindow"-->
