--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -1,17 +1,38 @@
 
 <Window xmlns="https://github.com/avaloniaui"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:Class="Autoclicker.MainWindow"
-		Background="#FFFF"
-		Width="300"
+		Background="#0E1628"
+		Width="200"
 		Height="200"
 		CornerRadius="8"
         ExtendClientAreaToDecorationsHint="True"
         ExtendClientAreaChromeHints="NoChrome"
-        ExtendClientAreaTitleBarHeightHint="0"
+        ExtendClientAreaTitleBarHeightHint="15"
         CanResize="False">
-	<Grid>
-		
+	<Window.Styles>
+		<Style Selector="Button">
+			<Setter Property="FontSize" Value="10"/>
+			<Setter Property="Grid.ColumnSpan" Value="1"/>
+			<Setter Property="Foreground" Value="White"/>
+			<Setter Property="Grid.Column" Value="1"/>
+			<Setter Property="HorizontalAlignment" Value="Stretch"/>
+			<Setter Property="TextBlock.TextAlignment" Value="Center"/>
+		</Style>
+		<Style Selector="TextBlock">
+			<Setter Property="Grid.Column" Value="3"/>
+			<Setter Property="Grid.ColumnSpan" Value="2"/>
+			<Setter Property="Background" Value="Transparent"/>
+		</Style>
+	</Window.Styles>
+	<Grid ColumnDefinitions="30,50,*,*,30" RowDefinitions="50,*,*,*,*,*" ColumnSpacing="5" RowSpacing="5">
+		<TextBlock Foreground="White" FontWeight="Bold" FontSize="22" Text="Auto clicker" Grid.Column="0" Grid.ColumnSpan="5" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+		<Button Grid.Row="1" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" TextBlock.TextAlignment="Center">Capture position</Button>
+		<Button Grid.Row="2">Delay</Button>
+		<Button Grid.Row="3">Clicks</Button>
+		<Button Grid.Row="4">Times</Button>
 	</Grid>
 </Window>
 <!--xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
