--- a/Assets/styles/Default_styles.axaml
+++ b/Assets/styles/Default_styles.axaml
@@ -2,31 +2,44 @@
        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <Style Selector="Button">
     <Setter Property="FontSize" Value="10"/>
-    <Setter Property="Grid.ColumnSpan" Value="1"/>
     <Setter Property="Foreground" Value="White"/>
-    <Setter Property="Grid.Column" Value="1"/>
     <Setter Property="HorizontalAlignment" Value="Stretch"/>
     <Setter Property="TextBlock.TextAlignment" Value="Center"/>
+	<Setter Property="Background" Value="Transparent"/>
+	<Setter Property="BorderBrush" Value="White"/>
+	<Setter Property="BorderThickness" Value="1"/>
+	  
+	<Style Selector="^:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+		<Setter Property="Background" Value="Transparent"/>
+		<Setter Property="BorderBrush" Value="White"/>
+		<Setter Property="BorderThickness" Value="1"/>
+	</Style>
+
+	<Style Selector="^:pressed /template/ ContentPresenter#PART_ContentPresenter">
+		<Setter Property="Background" Value="Transparent"/>
+		<Setter Property="BorderBrush" Value="White"/>
+		<Setter Property="BorderThickness" Value="1"/>
+	</Style>  
+
   </Style>
-  
+	
   <Style Selector="ButtonSpinner">
     <Setter Property="FontSize" Value="10"/>
-    <Setter Property="Grid.ColumnSpan" Value="3"/>
     <Setter Property="Foreground" Value="White"/>
-    <Setter Property="Grid.Column" Value="1"/>
     <Setter Property="HorizontalAlignment" Value="Stretch"/>
     <Setter Property="TextBlock.TextAlignment" Value="Center"/>
     <Setter Property="Background" Value="Transparent"/>
     <Setter Property="BorderBrush" Value="White" />
-  </Style>
-
-  <Style Selector="ButtonSpinner RepeatButton">
-    <Setter Property="Foreground" Value="White"/>
+	<Setter Property="Height" Value="10"/>
+	  
+	<Style Selector="^ RepeatButton">
+		<Setter Property="Foreground" Value="White"/>	  
+	</Style>
+  
   </Style>
 
   <Style Selector="TextBlock">
-    <Setter Property="Grid.Column" Value="3"/>
-    <Setter Property="Grid.ColumnSpan" Value="2"/>
     <Setter Property="Background" Value="Transparent"/>
   </Style>
+
 </Style>
