--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -12,11 +12,26 @@
         ExtendClientAreaChromeHints="NoChrome"
         ExtendClientAreaTitleBarHeightHint="15"
         CanResize="False">
+	<Window.Styles>
+		<Style Selector="Button">
+			<Setter Property="Grid.ColumnSpan" Value="3"/>
+			<Setter Property="Grid.Column" Value="1"/>
+		</Style>
+		<Style Selector="ButtonSpinner">
+			<Setter Property="Grid.ColumnSpan" Value="3"/>
+			<Setter Property="Grid.Column" Value="1"/>
+		</Style>
+		<Style Selector="TextBlock">
+			<Setter Property="Grid.Column" Value="3"/>
+			<Setter Property="Grid.ColumnSpan" Value="2"/>
+		</Style>
+	</Window.Styles>
+	
 	<Grid ColumnDefinitions="30,*,*,*,30" RowDefinitions="50,*,*,*,*,*" RowSpacing="">
-		<TextBlock Foreground="White" FontWeight="Bold" FontSize="22" Text="Auto clicker" Grid.Column="0" Grid.ColumnSpan="5" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
-		<Button Grid.Row="1" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" TextBlock.TextAlignment="Center">Capture position</Button>
-		<ButtonSpinner Grid.Row="2" Height="10" Content="delay"></ButtonSpinner>
-		<ButtonSpinner Grid.Row="3" Height="10" Content="clicks"></ButtonSpinner>
-		<ButtonSpinner Grid.Row="4" Height="10" Content="times"></ButtonSpinner>
+		<TextBlock Foreground="White" FontWeight="Bold" FontSize="22" Text="Click Bot" Grid.Column="0" Grid.ColumnSpan="5" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+		<Button Grid.Row="1" HorizontalAlignment="Stretch" TextBlock.TextAlignment="Center">Capture position</Button>
+		<ButtonSpinner Grid.Row="2" Content="Delay"></ButtonSpinner>
+		<ButtonSpinner Grid.Row="3" Content="Clicks"></ButtonSpinner>
+		<ButtonSpinner Grid.Row="4" Content="Times"></ButtonSpinner>
 	</Grid>
 </Window>
