--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -4,14 +4,17 @@
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:Class="Autoclicker.MainWindow"
-		Background="#0E1628"
+		TransparencyLevelHint="AcrylicBlur"
+		Background="rgba(0, 0, 0, 0.6)"
 		Width="200"
-		Height="200"
+		Height="230"
 		CornerRadius="8"
         ExtendClientAreaToDecorationsHint="True"
         ExtendClientAreaChromeHints="NoChrome"
         ExtendClientAreaTitleBarHeightHint="15"
-        CanResize="False">
+        CanResize="False"
+		KeyDown="OnKeyDown"
+		>
 	<Window.Styles>
 		<Style Selector="Button">
 			<Setter Property="Grid.ColumnSpan" Value="3"/>
@@ -21,17 +24,22 @@
 			<Setter Property="Grid.ColumnSpan" Value="3"/>
 			<Setter Property="Grid.Column" Value="1"/>
 		</Style>
-		<Style Selector="TextBlock">
-			<Setter Property="Grid.Column" Value="3"/>
-			<Setter Property="Grid.ColumnSpan" Value="2"/>
+		<Style Selector="TextBlock.heading">
+			<Setter Property="Grid.Column" Value="0"/>
+			<Setter Property="Grid.ColumnSpan" Value="5"/>
+			<Setter Property="FontFamily" Value="Bold"/>
+			<Setter Property="FontSize" Value="22"/>
+			<Setter Property="VerticalAlignment" Value="Center"/>
 		</Style>
 	</Window.Styles>
 	
-	<Grid ColumnDefinitions="30,*,*,*,30" RowDefinitions="50,*,*,*,*,*" RowSpacing="">
-		<TextBlock Foreground="White" FontWeight="Bold" FontSize="22" Text="Click Bot" Grid.Column="0" Grid.ColumnSpan="5" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
-		<Button Grid.Row="1" HorizontalAlignment="Stretch" TextBlock.TextAlignment="Center">Capture position</Button>
+	<Grid ColumnDefinitions="30,*,*,*,30" RowDefinitions="50,*,*,*,*,*,30" Focusable="True" IsTabStop="True">
+		<TextBlock Classes="heading" Text="Click Bot" HorizontalAlignment="Center"></TextBlock>
+		<Button Name="PositionText" Click="OnStartClick" Grid.Row="1" HorizontalAlignment="Stretch" TextBlock.TextAlignment="Center" Content="Capture position"></Button>
 		<ButtonSpinner Grid.Row="2" Content="Delay"></ButtonSpinner>
 		<ButtonSpinner Grid.Row="3" Content="Clicks"></ButtonSpinner>
 		<ButtonSpinner Grid.Row="4" Content="Times"></ButtonSpinner>
+		<Button Grid.Row="5">Start</Button>
+		<TextBlock Name="CapturedText" Text="" Grid.Row="6" Grid.ColumnSpan="5"></TextBlock>
 	</Grid>
 </Window>
