--- a/Assets/styles/Default_styles.axaml
+++ b/Assets/styles/Default_styles.axaml
@@ -8,6 +8,7 @@
 	<Setter Property="Background" Value="Transparent"/>
 	<Setter Property="BorderBrush" Value="White"/>
 	<Setter Property="BorderThickness" Value="1"/>
+	<Setter Property="Padding" Value="5 8 5 8"/>
 	  
 	<Style Selector="^:pointerover /template/ ContentPresenter#PART_ContentPresenter">
 		<Setter Property="Background" Value="Transparent"/>
